# web_3D_car

./: Cargo.toml  README.md  build.sh  rust-toolchain.toml  serve.py  serve.sh
.cargo/: config.toml
src/: camera.rs  lib.rs  physics.rs  render_state.rs  scene.rs
src/softbody/: car.rs  collision.rs  drivetrain.rs  mod.rs  solver.rs  structure.rs  tire.rs  tire_body.rs  vehicle.rs
tests/: smoke.rs
www/: audio.js  carbody.js  index.html  input.js  main.js  math.js  meshes.js  renderer.js  shader.wgsl  shaders.glsl.js  style.css  tirebody.js  ui.js  webgl_backend.js  webgpu_backend.js
