[package]
name = "web_3d_car"
version = "0.1.0"
edition = "2021"
description = "3D car game physics core (Rapier) compiled to WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
glam = "0.29"
rapier3d = "0.22"
console_error_panic_hook = "0.1"
rayon = "1"

# Browser thread pool over Web Workers + SharedArrayBuffer. Only on the wasm
# target; native builds/tests use rayon's normal OS thread pool.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-rayon = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
